2011-02-20  Kevin B. Kenny  <kennykb@acm.org>

	* tests/tdbcsqlite3.test (tdbc::sqlite3-30.[45]):
			Added tests for [foreach] and [allrows] against
			multiple result sets.

2011-01-26  Kevin B. Kenny  <kennykb@acm.org>

	* doc/tdbc_sqlite3.n:
	Added empty comment at the start of each manpage because 'man'
	interprets comments there as directives. Thanks to Konstantin
	Kohmoutov for reporting and diagnosing this error.
	
2010-09-03  Kevin B. Kenny  <kennykb@acm.org>

	* Makefile.in:	Added a semicolon to the end of the -load option
			on 'make test'. Without it, msys make changes all
			the forward slashes in the -load option to backslashes.
	
	* library/tdbcsqlite3.tcl:
	* tests/tdbcsqlite3.test:
			Changed 'keySequence' in 'foreignkeys' to
			'ordinalPosition' for consistency with 'primarykeys'.

	* configure.in:
	* README:
	* library/tdbcsqlite3.tcl:
	* tclconfig/:	Upgraded the build to use TEA 3.9.
			Advanced version number to 1.0b16.

2010-06-19  Kevin B. Kenny  <kennykb@acm.org>

	* tdbcsqlite3.tcl:	Added 'primarykeys' and 'foreignkeys'
	* tdbcsqlite3.test:	methods to the 'connection' object.  Added
				test cases for these methods.

2010-05-10  Kevin B. Kenny  <kennykb@acm.org>

	* aclocal.m4:	Synchronized with 'tdbc'.
	* configure.in: Advanced version to 1.0b15. Advanced TEA to 3.7.
	* library/tdbcsqlite3.tcl:
			Advanced version to 1.0b15.
	* README:	Advanced version to 1.0b15.
	* tclconfig/:	Advanced TEA to 3.7.
	* configure:	autoconf-2.59

2009-10-26  Kevin B. Kenny  <kennykb@acm.org>

	* README:			Advanced version number to 1.0b14.
	* configure.in:
	* library/tdbcsqlite3.tcl:
	* configure:			autoconf 2.59

	* tests/tdbcsqlite3.test:	Added test cases (known bugs) for
					duplicate column names in results.
	* doc/tdbcsqlite3.n:		Added a BUGS section documenting the
					known problem with duplicate column
					names.

2009-09-29  Kevin B. Kenny  <kennykb@acm.org>

	* README:			Advanced version number to 1.0b13
	* configure.in: