@@ -1,3 +1,11 @@
+2011-04-12  Kevin B. Kenny  <kennykb@acm.org>
+
+	* library/tdbcsqlite3.tcl ([resultset nextresults]):
+		Corrected a bug in the handling of multiple result
+		sets when one or more is empty.
+	* tests/tdbcsqlite3.test (tdbc::sqlite3-30.6):
+		Added a test case for the above bug.
+
 2011-02-20  Kevin B. Kenny  <kennykb@acm.org>
 
 	* tests/tdbcsqlite3.test (tdbc::sqlite3-30.[45]):
@@ -10,13 +18,13 @@
 	Added empty comment at the start of each manpage because 'man'
 	interprets comments there as directives. Thanks to Konstantin
 	Kohmoutov for reporting and diagnosing this error.
-	
+
 2010-09-03  Kevin B. Kenny  <kennykb@acm.org>
 
 	* Makefile.in:	Added a semicolon to the end of the -load option
 			on 'make test'. Without it, msys make changes all
 			the forward slashes in the -load option to backslashes.
-	
+
 	* library/tdbcsqlite3.tcl:
 	* tests/tdbcsqlite3.test:
 			Changed 'keySequence' in 'foreignkeys' to
